--- a/index.htm
+++ b/index.htm
@@ -9,52 +9,10 @@
 
 	<base href="/" />
 
-	<!-- angular pieces -->
-	<script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
-	<script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
+	<script type="text/javascript" src="www/js/vendor.min.js"></script>
+	<script type="text/javascript" src="www/js/app.min.js"></script>
 
-	<!-- jquery -->
-	<script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
-
-	<!-- our pieces -->
-	<script type="text/javascript" src="index.js"></script>
-
-	<!-- controllers -->
-	<script type="text/javascript" src="controllers/welcome.controller.js"></script>
-	<script type="text/javascript" src="controllers/exercise1.controller.js"></script>
-	<script type="text/javascript" src="controllers/exercise2.controller.js"></script>
-
-	<!-- services -->
-	<script type="text/javascript" src="services/modal.service.js"></script>
-	<script type="text/javascript" src="services/login.service.js"></script>
-
-	<!-- components, all in one application module -->
-	<script type="text/javascript" src="components/navigation/navigation.service.js"></script>
-	<script type="text/javascript" src="components/navigation/navigation.controller.js"></script>
-	<script type="text/javascript" src="components/navigation/navigation.js"></script>
-
-	<script type="text/javascript" src="components/homemadeModal/modal.controller.js"></script>
-	<script type="text/javascript" src="components/homemadeModal/modal.js"></script>
-
-	<script type="text/javascript" src="components/homemadeModal/modalPrompt/modalPrompt.controller.js"></script>
-	<script type="text/javascript" src="components/homemadeModal/modalPrompt/modalPrompt.js"></script>
-
-	<script type="text/javascript" src="components/homemadeModal/modalRegister/register.service.js"></script>
-	<script type="text/javascript" src="components/homemadeModal/modalRegister/modalRegister.controller.js"></script>
-	<script type="text/javascript" src="components/homemadeModal/modalRegister/modalRegister.js"></script>
-
-	<script type="text/javascript" src="components/homemadeModal/modalLogin/modalLogin.controller.js"></script>
-	<script type="text/javascript" src="components/homemadeModal/modalLogin/modalLogin.js"></script>
-
-	<script type="text/javascript" src="components/loggedInUser/loggedInUser.controller.js"></script>
-	<script type="text/javascript" src="components/loggedInUser/loggedInUser.js"></script>
-
-	<script type="text/javascript" src="components/rooms/rooms.service.js"></script>
-	<script type="text/javascript" src="components/rooms/rooms.controller.js"></script>
-	<script type="text/javascript" src="components/rooms/rooms.js"></script>
-
-	<script type="text/javascript" src="components/room/room.controller.js"></script>
-	<script type="text/javascript" src="components/room/room.js"></script>
+	<link rel="stylesheet" href="www/css/app.min.css">
 
 	<!-- if you don't have dist, find semantic in node_modules or install gulp and try again -->
 	<link href="semantic/dist/semantic.min.css" rel="stylesheet">
