--- a/index.htm
+++ b/index.htm
@@ -9,14 +9,14 @@
 
 	<base href="/" />
 
-	<script type="text/javascript" src="www/js/vendor.min.js"></script>
-	<script type="text/javascript" src="www/js/app.min.js"></script>
+	<script type="text/javascript" src="www/dist/js/vendor.min.js"></script>
+	<script type="text/javascript" src="www/dist/js/app.min.js"></script>
 
-	<link rel="stylesheet" href="www/css/app.min.css">
+	<link rel="stylesheet" href="www/dist/css/app.min.css">
 
 	<!-- if you don't have dist, find semantic in node_modules or install gulp and try again -->
-	<link href="semantic/dist/semantic.min.css" rel="stylesheet">
-	<script type="text/javascript" src="semantic/dist/semantic.min.js"></script>
+	<link href="node_modules/semantic-ui/dist/semantic.min.css" rel="stylesheet">
+	<script type="text/javascript" src="node_modules/semantic-ui/dist/semantic.min.js"></script>
 
 	<link href="styles.css" rel="stylesheet">
 
